@@ -1,5 +1,9 @@
 2001-11-11  Bruno Haible  <haible@clisp.cons.org>
 
+	* msgfmt.texi: Document --check-accelerators option.
+
+2001-11-11  Bruno Haible  <haible@clisp.cons.org>
+
 	* msginit.texi: Remove --verbose documentation.
 
 2001-08-23  Karl Eichwalder  <ke@suse.de>
